<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VegFinder</string>
    <string name="hello_world">Ahoj světe!</string>
    <string name="action_settings">Nastavení</string>
    <string name="detail">Detail</string>
    <string name="update">Aktualizovat</string>
    <string name="action_search">Hledat...</string>
    <string name="search_hint">Hledat restauraci</string>
    <string name="populate_error">Aktualizace restaurací se nezdařila!</string>
    <string name="populate_success">Aktualizace restaurací proběhla úspěšně!</string>
    <string name="populate_progress">Aktualizování restaurací...</string>
    <string name="populate_progress_title">Aktualizace</string>
    <string name="populate_start">Aktualizace restaurací</string>
    <string name="closest">Nejbližší</string>
    <string name="title_activity_restaurants_map">Mapa</string>
    <string name="opening_time">Otevírací čas:</string>
    <string name="address">Adresa:</string>
    <string name="telephone">Telefon:</string>
    <string name="web">Web:</string>
    <string name="menu">Jídelní lístek:</string>
    <string name="link">odkaz</string>
    <string name="navigate">Navigovat</string>
    <string name="show_on_map">Zobrazit na mapě</string>
    <string name="map">Mapa</string>
    <string name="list">Seznam</string>

</resources>
