<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:id="@+id/detail_name"
            android:layout_gravity="center_horizontal"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">


            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:src="@drawable/vegfinder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/detail_desc"/>

        </LinearLayout>



        <GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:columnCount="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:useDefaultMargins="true"
            android:rowOrderPreserved="false">


            <TextView
                android:layout_column="1"
                android:layout_row="1"
                android:id="@+id/detail_web"
                android:layout_gravity="left"/>

            <TextView
                android:text="E-mail"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_gravity="right"/>

            <TextView
                android:text="@string/web"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_gravity="right"/>

            <TextView
                android:autoLink="email"
                android:layout_column="1"
                android:layout_row="2"
                android:id="@+id/detail_email"
                android:layout_gravity="left"/>

            <TextView
                android:text="@string/menu"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="3"
                android:layout_gravity="right"/>

            <TextView
                android:layout_column="1"
                android:layout_row="3"
                android:id="@+id/detail_menu"
                android:layout_gravity="left"/>

            <TextView
                android:text="@string/opening_time"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_row="4"/>

            <TextView
                android:layout_column="1"
                android:layout_row="4"
                android:id="@+id/detail_opening"
                android:layout_gravity="left"/>

            <TextView
                android:text="@string/address"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="5"
                android:layout_gravity="right"/>

            <TextView
               android:layout_column="1"
               android:layout_row="5"
               android:id="@+id/detail_address"
               android:layout_gravity="left"/>


        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_btn_nav"
                android:text="@string/navigate"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_on_map"
                android:id="@+id/detail_btn_map"
                android:layout_margin="5dp"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>